The HeaderSearchBar was aligned correctly

--- a/src/Components/HeaderSearchBar/style.css
+++ b/src/Components/HeaderSearchBar/style.css
@@ -1,95 +1,94 @@
-.logo-busqueda {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 25px;
-    width: 200px;
+.search-header {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  max-height: 10rem;
+}
+.logo-header {
+  padding: 2.5rem;
 }
 
-.searching-tools{
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    width: 100%;
-    height: 59vh;
-    margin: 2.7rem 0;
-   
+.logo-busqueda {
+  width: 16rem;
+  padding: 1rem;
 }
+
 
 .search-bar {
-    position: relative;
-    width: 58.2rem;
-    min-width: 30rem;
-           
+  position: relative;
+  width: 58.2rem;
+  min-width: 30rem;
 }
 
-.center-bar {
-    /* position: absolute; */
-    width: 100%;
-    height: 4.4rem;
-    border: 0.1rem solid lightgray;
-    border-radius: 4.4rem;
-    /* z-index: 1; */
-    padding: 0 4rem;
-    justify-content: center;
+.center-bar-header {
+  /* position: absolute; */
+  width: 100%;
+  height: 4.4rem;
+  border: 0.1rem solid lightgray;
+  border-radius: 4.4rem;
+  /* z-index: 1; */
+  padding: 0 4rem;
+  justify-content: center;
+
+  box-shadow: 2px 2px 4px 0.2rem rgba(0, 0, 0, 0.15);
 }
 
-input.center-bar:focus{
-    outline-width: 0;
-    box-shadow: 0px 0px 6px 0.2rem rgba(0,0,0,.15);
-    font-size: medium;
+input.center-bar:focus {
+  outline-width: 0;
+  box-shadow: 0px 0px 6px 0.2rem rgba(0, 0, 0, 0.15);
+  font-size: medium;
 }
 .center-bar:hover {
-    box-shadow: 0px 0px 6px 0.2rem rgba(0,0,0,.15);
+  box-shadow: 0px 0px 6px 0.2rem rgba(0, 0, 0, 0.15);
 }
 
 .camera {
-    position: absolute;
-    right: 1.5rem;
-    top: 1rem;
-    height: 2.3rem;
-    width: 2.3rem;
-    z-index: 2;
-    cursor: pointer;
+  position: absolute;
+  right: 1.5rem;
+  top: 1rem;
+  height: 2.3rem;
+  width: 2.3rem;
+  z-index: 2;
+  cursor: pointer;
 }
 
 .focus {
-    position: absolute;
-    left: 1.5rem;
-    top: 1.2rem;
-    opacity: 0.35;
-    height: 2rem;
-    z-index: 2;
+  position: absolute;
+  left: 1.5rem;
+  top: 1.2rem;
+  opacity: 0.35;
+  height: 2rem;
+  z-index: 2;
 }
 
-
-.buttons{
-    margin: 6rem 0.5rem 2rem 0.5rem;
-    display: flex;
-    flex-flow: wrap row;
-    
-
+.buttons {
+  margin: 6rem 0.5rem 2rem 0.5rem;
+  display: flex;
+  flex-flow: wrap row;
 }
 
 button {
-    height: 3.6rem;
-    min-width: 5.4rem;
-    border-radius: 0.4rem;
-    margin: 1.1rem 0.5rem 0.4rem 0.4rem;
-    padding: 0 1.6rem;
-    font-size: 1.4rem;
-    background-color: var(--botton-color);
-    border: 1px solid var(--botton-color);
-    color: var(--text-color);
-    line-height: 27px;
-    cursor: pointer;
+  height: 3.6rem;
+  min-width: 5.4rem;
+  border-radius: 0.4rem;
+  margin: 1.1rem 0.5rem 0.4rem 0.4rem;
+  padding: 0 1.6rem;
+  font-size: 1.4rem;
+  background-color: var(--botton-color);
+  border: 1px solid var(--botton-color);
+  color: var(--text-color);
+  line-height: 27px;
+  cursor: pointer;
 }
 
-button:hover{
-    box-shadow: 0px 0px 1px 0.1rem rgba(0,0,0,.15);
+button:hover {
+  box-shadow: 0px 0px 1px 0.1rem rgba(0, 0, 0, 0.15);
 }
 
-.textgoogle{
-    font-size: small;
-    color: var(--text-color);
+.textgoogle {
+  font-size: small;
+  color: var(--text-color);
 }
